--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "aws-sdk": "^2.1315.0",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.0"
+    "node-xlsx": "^0.21.0",
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   }
 }
